# sunsetr

./: .gitignore  BACKEND_MIGRATION_LOG.md  Cargo.toml  LICENSE  README.md  flake.nix  sunsetr.service
.github/workflows/: release.yml
src/: args.rs  config.rs  constants.rs  hyprsunset.rs  lib.rs  logger.rs  main.rs  process.rs  signals.rs  startup_transition.rs  time_state.rs  utils.rs  wayland_implementation_analysis.md
src/backend/: mod.rs
src/backend/hyprland/: client.rs  mod.rs  process.rs
src/backend/wayland/: gamma.rs  mod.rs
src/commands/: mod.rs  reload.rs  test.rs
src/geo/: city_selector.rs  mod.rs  solar.rs  timezone.rs
tests/: config_property_tests.proptest-regressions  config_property_tests.rs  geo_property_tests.proptest-regressions  geo_property_tests.rs  integration_tests.rs  lock_file_unit_tests.rs  lock_logic_test.rs  test_fixes_and_warnings_report.md
tests/geo/: sunrise_test.rs  test_api.rs  test_cities_fields.rs  test_sunrise_api.rs
