[package]
name = "sunsetr"
version = "0.2.1"
edition = "2024"
authors = ["Cipher.J <116757358+psi4j@users.noreply.github.com>"]
description = "Automatic color temperature controller for hyprsunset"
license = "MIT"
repository = "https://github.com/psi4j/sunsetr"
readme = "README.md"

[features]
default = []
proptest = ["dep:proptest"]

[dependencies]
anyhow = "1.0"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "6.0"
fs2 = "0.4.3"
signal-hook = "0.3.18"
libc = "0.2.172"
regex = "1.11"
version-compare = "0.2"
nix = { version = "0.30.1", features = ["user"] }
termios = "0.3.3"
crossterm = "0.29.0"
proptest = { version = "1.6", optional = true }

[dev-dependencies]
tempfile = "3.20"
mockall = "0.12"
serial_test = "3.2"
env_logger = "0.11"

[package.metadata.release]
publish = false
push = true
tag-name = "v{{version}}"
